{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 47,
  "lineage": "92ae99da-b900-bf1f-fece-e04cc372cef6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993359121485:vpc/vpc-0ad63fbb1a59ff73a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a624f7ce566d7b7f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-098f62948cfc38dae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad63fbb1a59ff73a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01926b7d468f80bd8",
            "owner_id": "993359121485",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elb_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:993359121485:instance/i-0f441b97f2a770796",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f441b97f2a770796",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-037f83bcf8e5bf609",
            "private_dns": "ip-172-31-88-245.ec2.internal",
            "private_ip": "172.31.88.245",
            "public_dns": "ec2-54-89-189-38.compute-1.amazonaws.com",
            "public_ip": "54.89.189.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0787e18c390f3717b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-from-load-balancer-20211219193240889100000003",
              "allow-ssh-20211219193240888900000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f592cdc322a1aac",
            "tags": {
              "Name": "elb-api",
              "environment": "development"
            },
            "tags_all": {
              "Name": "elb-api",
              "author": "Ronan Lucio Pereira",
              "environment": "development",
              "team": "SRE"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-017d45eea79d932db",
              "sg-045f2e03d40fcb72c"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform_key_pair",
            "data.aws_ami.ubuntu",
            "data.aws_vpc.default",
            "module.security_group_allow_http_from_alb.aws_security_group.this",
            "module.security_group_allow_http_from_alb.aws_security_group.this_name_prefix",
            "module.security_group_allow_ssh.aws_security_group.this",
            "module.security_group_allow_ssh.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993359121485:loadbalancer/app/default-alb/bb8587218100b532",
            "arn_suffix": "app/default-alb/bb8587218100b532",
            "desync_mitigation_mode": "defensive",
            "dns_name": "default-alb-1706502846.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:993359121485:loadbalancer/app/default-alb/bb8587218100b532",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "default-alb",
            "security_groups": [
              "sg-0b8006baefff3fb5b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0258c2e50dd16caf2"
              },
              {
                "subnet_id": "subnet-04f592cdc322a1aac"
              },
              {
                "subnet_id": "subnet-0555feda6cd023588"
              },
              {
                "subnet_id": "subnet-0763930c8393056fd"
              },
              {
                "subnet_id": "subnet-0a1861036b3b3838f"
              },
              {
                "subnet_id": "subnet-0c5810e6831392968"
              }
            ],
            "subnets": [
              "subnet-0258c2e50dd16caf2",
              "subnet-04f592cdc322a1aac",
              "subnet-0555feda6cd023588",
              "subnet-0763930c8393056fd",
              "subnet-0a1861036b3b3838f",
              "subnet-0c5810e6831392968"
            ],
            "tags_all": {
              "author": "Ronan Lucio Pereira",
              "team": "SRE"
            },
            "vpc_id": "vpc-0ad63fbb1a59ff73a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.security_group_allow_http.aws_security_group.this",
            "module.security_group_allow_http.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993359121485:listener/app/default-alb/bb8587218100b532/068e81452ace05f0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993359121485:targetgroup/tg-elb-api/28f7739ecd8750d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993359121485:listener/app/default-alb/bb8587218100b532/068e81452ace05f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:993359121485:loadbalancer/app/default-alb/bb8587218100b532",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "author": "Ronan Lucio Pereira",
              "team": "SRE"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "module.security_group_allow_http.aws_security_group.this",
            "module.security_group_allow_http.aws_security_group.this_name_prefix",
            "aws_lb.default_alb",
            "aws_lb_target_group.elb_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:993359121485:targetgroup/tg-elb-api/28f7739ecd8750d3",
            "arn_suffix": "targetgroup/tg-elb-api/28f7739ecd8750d3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:993359121485:targetgroup/tg-elb-api/28f7739ecd8750d3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-elb-api",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "author": "Ronan Lucio Pereira",
              "team": "SRE"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0ad63fbb1a59ff73a"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "elb_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:993359121485:targetgroup/tg-elb-api/28f7739ecd8750d3-20211219230257275000000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:993359121485:targetgroup/tg-elb-api/28f7739ecd8750d3",
            "target_id": "i-0f441b97f2a770796"
          },
          "dependencies": [
            "aws_lb_target_group.elb_api",
            "module.security_group_allow_http_from_alb.aws_security_group.this_name_prefix",
            "module.security_group_allow_ssh.aws_security_group.this_name_prefix",
            "aws_instance.elb_api",
            "aws_key_pair.terraform_key_pair",
            "data.aws_ami.ubuntu",
            "data.aws_vpc.default",
            "module.security_group_allow_http_from_alb.aws_security_group.this",
            "module.security_group_allow_ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_allow_http",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993359121485:security-group/sg-0b8006baefff3fb5b",
            "description": "Security group to allow HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8006baefff3fb5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http-20211219193240888700000001",
            "name_prefix": "allow-http-",
            "owner_id": "993359121485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-http"
            },
            "tags_all": {
              "Name": "allow-http",
              "author": "Ronan Lucio Pereira",
              "team": "SRE"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ad63fbb1a59ff73a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_allow_http",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2330505026",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b8006baefff3fb5b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group_allow_http.aws_security_group.this",
            "module.security_group_allow_http.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_allow_http",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2288852007",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b8006baefff3fb5b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group_allow_http.aws_security_group.this",
            "module.security_group_allow_http.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_allow_http_from_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993359121485:security-group/sg-045f2e03d40fcb72c",
            "description": "Security group to allow traffic from ALB load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045f2e03d40fcb72c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP access on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8006baefff3fb5b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-from-load-balancer-20211219193240889100000003",
            "name_prefix": "allow-from-load-balancer-",
            "owner_id": "993359121485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-from-load-balancer"
            },
            "tags_all": {
              "Name": "allow-from-load-balancer",
              "author": "Ronan Lucio Pereira",
              "team": "SRE"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ad63fbb1a59ff73a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_allow_http_from_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow HTTP access on port 80",
            "from_port": 80,
            "id": "sgrule-1672965479",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-045f2e03d40fcb72c",
            "self": false,
            "source_security_group_id": "sg-0b8006baefff3fb5b",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group_allow_http_from_alb.aws_security_group.this_name_prefix",
            "data.aws_vpc.default",
            "module.security_group_allow_http.aws_security_group.this",
            "module.security_group_allow_http.aws_security_group.this_name_prefix",
            "module.security_group_allow_http_from_alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_allow_http_from_alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2447789390",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-045f2e03d40fcb72c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group_allow_http_from_alb.aws_security_group.this",
            "module.security_group_allow_http_from_alb.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_allow_ssh",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993359121485:security-group/sg-017d45eea79d932db",
            "description": "Security group to allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017d45eea79d932db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-20211219193240888900000002",
            "name_prefix": "allow-ssh-",
            "owner_id": "993359121485",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh",
              "author": "Ronan Lucio Pereira",
              "team": "SRE"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ad63fbb1a59ff73a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group_allow_ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-1596604318",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-017d45eea79d932db",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group_allow_ssh.aws_security_group.this",
            "module.security_group_allow_ssh.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_allow_ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3193939093",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-017d45eea79d932db",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.security_group_allow_ssh.aws_security_group.this",
            "module.security_group_allow_ssh.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}